# Melomaniac

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  ROADMAP.md  md  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  ci.yml  ios-release.yml  release.yml
context/: AUDIO_BRIDGE.md  BUGS.md  DESIGN-p2p-sync.md  DESIGN-playback.md  DESIGN-playlist-git.md  DOWNLOADS.md  EDITOR.md  LIBRARY.md  MOBILE.md  PLAN.md  PLAYBACK.md  PLAYLISTS.md  TRACKS.md
scripts/: ios-dev.mjs
src/: App.css  App.tsx  main.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/crates/audio/: Cargo.toml  build.rs
src-tauri/crates/audio/ios/: DESIGN.md  Package.swift
src-tauri/crates/audio/ios/Sources/MelomaniacPlayer/: MelomaniacPlayer.swift
src-tauri/crates/audio/src/: ios.rs  lib.rs
src-tauri/crates/audio/src/desktop/: audio.rs  mod.rs
src-tauri/crates/audio/tests/: types.rs
src-tauri/crates/storage/: Cargo.toml  DESIGN.md
src-tauri/crates/storage/benches/: cas.rs  db.rs  treeserde.rs
src-tauri/crates/storage/migrations/: 0001_create_tracks.sql  0002_create_plays_skips.sql  0003_create_playlists_branches.sql  0004_create_commits.sql  0005_add_mime_type.sql  0006_add_track_provenance.sql  0007_add_playlist_artwork.sql  0008_add_fork_at_commit.sql  0009_add_play_skip_details.sql
src-tauri/crates/storage/src/: cas.rs  db.rs  editor.rs  indexer.rs  ingest.rs  lib.rs  tree.rs
src-tauri/crates/storage/tests/: cas.rs  db.rs  indexer.rs
src-tauri/crates/sync/: Cargo.toml  build.rs
src-tauri/crates/sync/benches/: merge.rs
src-tauri/crates/sync/ios/: Package.swift
src-tauri/crates/sync/ios/Sources/MelomaniacSync/: MelomaniacSync.swift
src-tauri/crates/sync/src/: http_server.rs  identity.rs  ios.rs  lib.rs  merge.rs
src-tauri/crates/sync/src/desktop/: mod.rs
src-tauri/crates/sync/tests/: merge.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  discord.rs  downloader.rs  editor.rs  lib.rs  main.rs  network.rs  stats.rs  storage.rs  sync.rs
src/components/: DiffViewer.tsx  MusicCard.tsx  MusicCarousel.tsx  MusicControls.jsx  MusicInfo.jsx  Navbar.tsx  PairingModal.tsx  PeerPlaylistsModal.tsx
src/desktop/: DesktopApp.tsx  animations.ts  data.ts  icons.tsx  style.css  types.ts
src/desktop/components/: AddToPlaylistModal.tsx  ArtworkModal.tsx  BranchModal.tsx  BulkEditPanel.tsx  Carousel.tsx  CommitBar.tsx  CommitGraph.tsx  DesktopLoader.tsx  DownloadModal.tsx  EditorView.tsx  ForkPlaylistModal.tsx  LibraryView.tsx  MergeBranchModal.tsx  MiniPlayer.tsx  NewPlaylistModal.tsx  PlayerControls.tsx  PlaylistArtworkModal.tsx  PlaylistHeader.tsx  PlaylistSettingsPanel.tsx  QueuePanel.tsx  ResizeHandle.tsx  RightPanel.tsx  ScrollText.tsx  Select.tsx  SettingsModal.tsx  Sidebar.tsx  StatsView.tsx  TitleBar.tsx  TrackList.tsx  WindowResizeEdges.tsx
src/desktop/hooks/: useAnimatedMount.ts
src/mobile/: MobileApp.tsx  animations.ts  artworkCache.ts  data.ts  icons.tsx  playerContext.ts  style.css
src/mobile/__tests__/: artworkCache.test.ts  parseTrackTitle.test.ts
src/mobile/components/: Discover.tsx  Library.tsx  NowPlaying.tsx  PlaylistDetail.tsx  Settings.tsx  common.tsx
src/mobile/hooks/: usePlaylistArtwork.ts  useTrackAccent.ts  useTrackArtwork.ts
src/mobile/utils/: parseTrackTitle.ts
src/shared/: artworkAccents.ts  platform.ts  themes.ts
src/store/: index.ts  librarySlice.ts  playbackSlice.ts  playlistSlice.ts  queueSlice.ts  syncSlice.ts  types.ts
src/store/__tests__/: data.test.ts  library.test.ts  playback.test.ts  playlist.test.ts  queue.test.ts  sync.test.ts
