[workspace]
members = [".", "crates/audio", "crates/storage"]
resolver = "2"

[package]
name = "melomaniac"
version = "0.1.0-alpha"
description = "An app for infinite music"
authors = ["Soupa"]
edition = "2024"

[lib]
name = "melomaniac_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
melomaniac-audio   = { path = "crates/audio" }
melomaniac-storage = { path = "crates/storage" }
tauri = { version = "2.11.0", features = [] }
tauri-plugin-shell  = "2.3.5"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.4"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio   = { version = "1",   features = ["sync", "fs", "macros", "rt"] }
uuid    = { version = "1",   features = ["v4"] }
discord-rich-presence = "1"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
rodio = { version = "0.22", features = ["symphonia-all"] }

[dev-dependencies]
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

