[package]
name = "melomaniac-audio"
version = "0.0.1"
authors = ["Soupa"]
edition = "2024"

[dependencies]
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
rodio = { version = "0.22", features = ["symphonia-all"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1", features = ["build"] }

[dev-dependencies]
serde_json = "1"
