[package]
name = "melomaniac-storage"
version = "0.0.1"
authors = ["Soupa"]
edition = "2024"

[dependencies]
thiserror = "2.0"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
blake3     = "1"
uuid       = { version = "1", features = ["v4"] }
tokio      = { version = "1", features = ["fs"] }
sqlx       = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
id3        = "1"
lofty      = "0.22"
symphonia  = { version = "0.5", features = ["mp3"] }

# Android NDK does not ship libsqlite3 headers — bundle SQLite from source
[target.'cfg(target_os = "android")'.dependencies]
libsqlite3-sys = { version = "*", features = ["bundled"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio     = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile  = "3"

[[bench]]
name    = "cas"
harness = false

[[bench]]
name    = "treeserde"
harness = false

[[bench]]
name    = "db"
harness = false
