[package]
name = "melomaniac-sync"
version = "0.0.1"
edition = "2024"

[dependencies]
thiserror  = "2.0"
libc       = "0.2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand       = "0.8"
base64     = "0.22"
keyring    = "3"
uuid       = { version = "1", features = ["v4"] }
tokio      = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
melomaniac-storage = { path = "../storage" }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
mdns-sd  = "0.11"
axum     = "0.7"
reqwest  = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tower    = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(target_os = "ios")'.dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1", features = ["build"] }

[dev-dependencies]
tempfile = "3"
